k8s/connections-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: connections-db
spec:
  selector:
    matchLabels:
      app: connections-db
  serviceName: connections-db
  replicas: 1
  template:
    metadata:
      labels:
        app: connections-db
    spec:
      containers:
        - name: connections-db
          image: neo4j:4.4.39-community
          resources:
            limits:
              cpu: "200m"
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 600Mi
          ports:
            - containerPort: 7687 # Bolt
          volumeMounts:
            - name: neo4j-data
              mountPath: /data
            - name: neo4j-logs
              mountPath: /logs
  volumeClaimTemplates:
    - metadata:
        name: neo4j-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: neo4j-logs
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: connections-db
  labels:
    app: connections-db
spec:
  clusterIP: None
  ports:
    - port: 7687
      targetPort: 7687
      name: bolt
  selector:
    app: connections-db
