k8s/connections-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connections-service
spec:
  selector:
    matchLabels:
      app: connections-service
  template:
    metadata:
      labels:
        app: connections-service
    spec:
      containers:
        - name: connections-service
          image: namancristvats/linkedin-app-connection-service
          resources:
            limits:
              memory: "400Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 9030

---

apiVersion: v1
kind: Service
metadata:
  name: connections-service
spec:
  selector:
    app: connections-service
  ports:
    - port: 80
      targetPort: 9030
