k8s/posts-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service
spec:
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: namancristvats/linkedin-app-posts_service
          resources:
            limits:
              memory: "400Mi"
              cpu: "200m"
            requests:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 9010

---

apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  selector:
    app: posts-service
  ports:
    - port: 80
      targetPort: 9010
